2017/05/22  José Miguel Silva Caldeira <miguel@ncdc.pt>

	* Organize and make the project available in github.